# pcdoctor

./: .env.template  Cargo.toml  README.md
config/: menu.json
src/: main.rs  models.rs
