[package]
name = "PCDoctorBot"
authors = ["Denis Klintukhov <denis.klintukhov@gmail.com>"]
homepage = "https://github.com/DKlintukhov/PCDoctorBot"
repository = "https://github.com/DKlintukhov/PCDoctorBot"
license = "GNU"
readme = "README.md"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
log = "0.4.27"
dotenvy = "0.15.7"
pretty_env_logger = "0.5.0"
tokio = { version =  "1.46.1", features = ["rt-multi-thread", "macros"] }
